Various styling changes

--- a/functions/test-db/json2/scvo/templates/default.hbs
+++ b/functions/test-db/json2/scvo/templates/default.hbs
@@ -21,7 +21,11 @@
             <a href="https://cms.scvo.org/wp-admin/post.php?post={{wpid}}&action=edit"><i class="material-icons">border_color</i></a>
         </li>
     </ul>
+    {{else}}
+    <div class="spacer"></div>
     {{/compare}}
+    {{else}}
+    <div class="spacer"></div>
     {{/if}}
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
