--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -178,15 +178,35 @@ footer .mdc-list .mdc-list-item a:hover {
 }
 
 .splash-image {
-    -webkit-transition: background-image 100ms linear;
-    -moz-transition: background-image 100ms linear;
-    -o-transition: background-image 100ms linear;
-    -ms-transition: background-image 100ms linear;
-    transition: background-image 100ms linear;
-    -webkit-animation-direction: alternate; /* Chrome, Safari, Opera */
-    animation-direction: alternate;
-    -webkit-animation-iteration-count: 2; /* Chrome, Safari, Opera */
-    animation-iteration-count: 2;
+        -webkit-animation: fadein 100ms; /* Safari, Chrome and Opera > 12.1 */
+           -moz-animation: fadein 100ms; /* Firefox < 16 */
+            -ms-animation: fadein 100ms; /* Internet Explorer */
+             -o-animation: fadein 100ms; /* Opera < 12.1 */
+                animation: fadein 100ms;
+}
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
 
 .mdc-toolbar {
@@ -497,6 +517,9 @@ ul.breadcrumb {
     li:not(:last-child) {
         margin-right: $spacing-unit/4;
     }
+}
+.spacer {
+    margin: 0 0 $spacing-unit*1.5;
 }
 .post-info {
     font-size: 0.9rem;
