--- a/functions/test-db/json2/scvo/templates/scvo.hbs
+++ b/functions/test-db/json2/scvo/templates/scvo.hbs
@@ -23,7 +23,6 @@
     <meta name="msapplication-TileImage" content="/assets/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#00838f">
     <link rel="search" type="application/opensearchdescription+xml" title="SCVO" href="/assets/opensearch.xml" />
-    <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link type="text/css" rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
     <style type="text/css">
     {{{this.css}}}
@@ -55,7 +54,9 @@
                                     <input type="text" class="mdc-textfield__input white-text searchRoute" placeholder="Search" id="search"
                                     [searchRoute]='"main-search"' [paramsTemplate]='"{ \"queryParams\": { \"q\": %q } }"'>
                                 </div>
-                                <a href="#" class="material-icons mdc-toolbar__icon" aria-label="Search" alt="Search">search</a>
+                                <a href="#" class="mdc-toolbar__icon" aria-label="Search" alt="Search">
+                                    <span class="fa fa-2x fa-search" aria-hidden="true"></span>
+                                </a>
                             </div>
                         </section>
                     </div>
