--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -642,8 +642,8 @@ p:last-child {
 .post-content {
     a[href^="http://"]::after,
     a[href^="https://"]::after {
-        font-family: 'Material Icons';
-        content: "open_in_new";
+        font-family: 'FontAwesome';
+        content: "\f08e";
         margin-left: 0.25rem;
         text-decoration: none;
         display: inline-block;
@@ -653,7 +653,34 @@ p:last-child {
     }
 }
 
-.inline-material-icon {
+.fa {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+/* makes the font 33% larger relative to the icon container */
+.fa-lg {
+    font-size: 1.33333333em;
+    line-height: 0.75em;
+    vertical-align: -15%;
+}
+.fa-2x {
+    font-size: 2em;
+}
+.fa-3x {
+    font-size: 3em;
+}
+.fa-4x {
+    font-size: 4em;
+}
+.fa-5x {
+    font-size: 5em;
+}
+
+.inline-icon {
     vertical-align: middle;
 }
 
