--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -177,38 +177,6 @@ footer .mdc-list .mdc-list-item a:hover {
     }
 }
 
-.splash-image {
-        -webkit-animation: fadein 100ms; /* Safari, Chrome and Opera > 12.1 */
-           -moz-animation: fadein 100ms; /* Firefox < 16 */
-            -ms-animation: fadein 100ms; /* Internet Explorer */
-             -o-animation: fadein 100ms; /* Opera < 12.1 */
-                animation: fadein 100ms;
-}
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
 .mdc-toolbar {
     -webkit-transition: background-color 100ms linear;
     -moz-transition: background-color 100ms linear;
@@ -286,6 +254,9 @@ footer .mdc-list .mdc-list-item a:hover {
             cursor: pointer;
             visibility: hidden;
             width: 0;
+            .fa-bars {
+                font-size: 1.7rem;
+            }
         }
         .mdc-toolbar__icon--menu:focus {
             outline: none;
@@ -298,6 +269,9 @@ footer .mdc-list .mdc-list-item a:hover {
         }
         .mdc-toolbar__section.toolbar-search {
             vertical-align: middle;
+            .fa-search {
+                font-size: 1.3rem;
+            }
         }
         .mdc-toolbar__section.toolbar-menu {
             background: rgba(0, 0, 0, 0.15);
