--- a/functions/test-db/json2/scvo/templates/scvo.hbs
+++ b/functions/test-db/json2/scvo/templates/scvo.hbs
@@ -55,7 +55,7 @@
                                     [searchRoute]='"main-search"' [paramsTemplate]='"{ \"queryParams\": { \"q\": %q } }"'>
                                 </div>
                                 <a href="#" class="mdc-toolbar__icon" aria-label="Search" alt="Search">
-                                    <span class="fa fa-2x fa-search" aria-hidden="true"></span>
+                                    <span class="fa fa-search" aria-hidden="true"></span>
                                 </a>
                             </div>
                         </section>
