--- a/functions/test-db/json2/scvo/templates/main-search.hbs
+++ b/functions/test-db/json2/scvo/templates/main-search.hbs
@@ -32,7 +32,7 @@
 
             {{#each paging.pageRange}}
                 <li class="{{#compare ../paging.currentPage "===" this.pageNumber}}current-page{{/compare}} pagination-distance-{{this.distance}}">
-                    <a  class="mdc-button mdc-button--compact" href="/search?q={{../params.query.q}}&page={{this}}">{{this.pageNumber}}</a>
+                    <a  class="mdc-button mdc-button--compact" href="/search?q={{../params.query.q}}&page={{this.pageNumber}}">{{this.pageNumber}}</a>
                 </li>
             {{/each}}
 
