--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -327,16 +327,24 @@ footer .mdc-list .mdc-list-item a:hover {
                 font-weight: 400;
                 letter-spacing: -0.08rem;
                 line-height: 3rem;
-                margin-bottom: 0.75rem;
+                margin-bottom: $spacing-unit/4;
+                .highlight {
+                    display: inline;
+                    background: rgba(0,0,0,0.3);
+                    padding: 0 0 0.3rem 0;
+                    box-shadow: 0.75rem 0 0 rgba(0,0,0,0.3), -0.75rem 0 0 rgba(0,0,0,0.3);
+                }
             }
             h1.document-tile,
             h1.event-title,
             h1.post-title {
-                font-size: 2.33rem;
+                font-size: 2rem;
+                line-height: 3.1rem;
             }
             h1.evidence-library-title,
             h1.document-title {
                 font-size: 2rem;
+                line-height: 3.1rem;
             }
         }
     }
