--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -335,14 +335,11 @@ footer .mdc-list .mdc-list-item a:hover {
                     box-shadow: 0.75rem 0 0 rgba(0,0,0,0.3), -0.75rem 0 0 rgba(0,0,0,0.3);
                 }
             }
+            h1.evidence-library-title,
             h1.document-tile,
             h1.event-title,
             h1.post-title {
-                font-size: 2rem;
-                line-height: 3.1rem;
-            }
-            h1.evidence-library-title,
-            h1.document-title {
+                padding-left: 0.75rem;
                 font-size: 2rem;
                 line-height: 3.1rem;
             }
