--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -421,6 +421,14 @@ footer .mdc-list .mdc-list-item a:hover {
     }
 }
 
+.scvo-document.full {
+    ul {
+        margin: 0;
+        list-style-type: none;
+        padding: 0;
+    }
+}
+
 .latest-grid {
     h2 {
         font-weight: 600;
