--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -582,12 +582,14 @@ ul.supplimentary-list {
             display: block;
             margin-bottom: $spacing-unit/4;
         }
-        .post-info-author {
-            display: none;
-        }
     }
     li.supplimentary-list-item:not(:last-child){
         margin-bottom: $spacing-unit;
+    }
+}
+.sidebar .list {
+    .post-info-author {
+        display: none;
     }
 }
 
