--- a/functions/test-db/json2/scvo/templates/post-list.hbs
+++ b/functions/test-db/json2/scvo/templates/post-list.hbs
@@ -1,14 +1,20 @@
 <div class="splash-image splash-image-post{{#if primaryResponse.hits.hits.[0]._source.featured_image}} splash-image-featured{{/if}}" style="background-image: {{#if primaryResponse.hits.hits.[0]._source.featured_image}}{{else}}linear-gradient(10deg, var(--mdc-theme-primary-dark) 10%, var(--mdc-theme-primary-fade) 75%, rgba(0,0,0,0.2) 100%),{{/if}}url('{{#if primaryResponse.hits.hits.[0]._source.featured_image}}{{primaryResponse.hits.hits.[0]._source.featured_image.sizes.full.source_url}}{{else}}{{#if supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{supplimentaryResponse.splash.hits.hits.[0]._source.original_image}}{{/if}}{{/if}}');{{#if primaryResponse.hits.hits.[0]._source.featured_image}} max-height:{{primaryResponse.hits.hits.[0]._source.featured_image.sizes.full.height}}px;{{/if}}">
     <div class="container-fluid">
         <div class="mdc-layout-grid">
-            <h1 class="post-title">
-                {{#with primaryResponse.hits.hits.[0]._source}}
-                {{#each categories_slug}}
-                {{#compare path this}}
-                {{{categories.[@index]}}}
-                {{/compare}}
-                {{/each}}
-                {{/with}}
+            <h1 class="page-title">
+                <!-- { {#each primaryResponse.hits.hits.[0]._source.categories_slug}}
+                { {#compare (lastItem (split ../params.path '_')) this}}
+                category: { {../categories.[@index]}}
+                <br />index: { {@index}}
+                { {else}}
+                this: { {this}}<br />
+                path: { {params.path}}
+                path: { {../params.path}}
+                path: { {../../params.path}}
+                path: { {../../../../params.path}}
+                path: { {../../../../../params.path}}
+                { {/compare}}
+                { {/each}} -->
             </h1>
         </div>
     </div>
