Show author info with supplimentary query

--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -532,6 +532,24 @@ ul.breadcrumb {
             vertical-align: bottom;
         }
     }
+    .post-info-categories {
+        .inline-list {
+            li {
+                background: var(--mdc-theme-primary-dark);
+                padding: 0.1rem 0.4rem 0.05rem;
+                border-radius: 1rem;
+                display: inline-block;
+                font-size: 90%;
+                a {
+                    color: #fff;
+                }
+                a:hover {
+                    background: var(--mdc-theme-primary);
+                    text-decoration: none;
+                }
+            }
+        }
+    }
 }
 .full .post-info {
     margin: $spacing-unit/2 0 $spacing-unit*1.5;
