Added related TFN posts

--- a/functions/test-db/json2/scvo/templates/post.hbs
+++ b/functions/test-db/json2/scvo/templates/post.hbs
@@ -22,6 +22,17 @@
                     {{/each}}
                 </ul>
             </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related post-related">
+                <div class="mdc-layout-grid">
+                    <div class="mdc-layout-grid__inner">
+                        {{#each supplimentaryResponse.tfn_related_posts.hits.hits}}
+                        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+                            {{{_source.rendered.gist}}}
+                        </div>
+                        {{/each}}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
