--- a/functions/test-db/json2/scvo/templates/post.hbs
+++ b/functions/test-db/json2/scvo/templates/post.hbs
@@ -18,7 +18,7 @@
                 <h3 class="author">More by {{primaryResponse.hits.hits.[0]._source.author_name}}</h3>
                 <ul class="supplimentary-list">
                     {{#each supplimentaryResponse.authors_posts.hits.hits}}
-                    {{{_source.rendered.list}}}
+                    {{{_source.rendered.sidebar}}}
                     {{/each}}
                 </ul>
             </div>
