--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -242,6 +242,13 @@ footer .mdc-list .mdc-list-item a:hover {
                     top: 62px;
                 }
             }
+            #upper-tab-bar {
+                margin-right: $spacing-unit;
+                .mdc-tab {
+                    min-width: auto;
+                    font-weight: 500;
+                }
+            }
         }
         a.mdc-toolbar__icon:hover {
             color: white !important;
@@ -266,6 +273,9 @@ footer .mdc-list .mdc-list-item a:hover {
         }
         .mdc-toolbar__icon:last-of-type {
             padding-right: 0;
+        }
+        .mdc-toolbar__section {
+            height: 64px;
         }
         .mdc-toolbar__section.toolbar-search {
             vertical-align: middle;
@@ -802,6 +812,7 @@ footer {
             visibility: visible;
             width: auto;
         }
+        #upper-tab-bar,
         .mdc-toolbar__row.toolbar-nav {
             display: none;
         }
