--- a/functions/test-db/json2/scvo/templates/document.hbs
+++ b/functions/test-db/json2/scvo/templates/document.hbs
@@ -13,9 +13,7 @@
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 content evidence-library-content">
-                {{#with primaryResponse.hits.hits.[0]._source}}
-                {{{rendered.full}}}
-                {{/with}}
+                {{{primaryResponse.hits.hits.[0]._source.rendered.full}}}
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar evidence-library-sidebar">
                 <!-- TBC -->
