--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -178,17 +178,22 @@ footer .mdc-list .mdc-list-item a:hover {
 }
 
 .mdc-toolbar {
-    -webkit-transition: background-color 100ms linear;
-    -moz-transition: background-color 100ms linear;
-    -o-transition: background-color 100ms linear;
-    -ms-transition: background-color 100ms linear;
-    transition: background-color 100ms linear;
-    -webkit-animation-direction: alternate; /* Chrome, Safari, Opera */
-    animation-direction: alternate;
-    -webkit-animation-iteration-count: 2; /* Chrome, Safari, Opera */
-    animation-iteration-count: 2;
-    .mdc-toolbar__row {
+    // -webkit-transition: background-color 100ms linear;
+    // -moz-transition: background-color 100ms linear;
+    // -o-transition: background-color 100ms linear;
+    // -ms-transition: background-color 100ms linear;
+    // transition: background-color 100ms linear;
+    // -webkit-animation-direction: alternate; /* Chrome, Safari, Opera */
+    // animation-direction: alternate;
+    // -webkit-animation-iteration-count: 2; /* Chrome, Safari, Opera */
+    // animation-iteration-count: 2;
+    .mdc-toolbar__row,
+    .mdc-toolbar__icon,
+    .mdc-form-field {
         height: 64px;
+        padding: 0;
+    }
+    .mdc-toolbar__row {
         .container-fluid {
             display: -webkit-box;
             display: -ms-flexbox;
@@ -329,10 +334,11 @@ footer .mdc-list .mdc-list-item a:hover {
         .mdc-layout-grid {
             position: absolute;
             left: 0;
-            bottom: $spacing-unit/2;
+            bottom: $spacing-unit;
             img.header-text {
                 max-width: 100%;
-                max-height: 18vh;
+                height: auto;
+                max-height: 6rem;
             }
             h1 {
                 margin: 0;
@@ -429,6 +435,10 @@ footer .mdc-list .mdc-list-item a:hover {
     .post-info {
         padding: 0;
     }
+}
+
+.mdc-layout-grid {
+    padding: 0;
 }
 
 .credit-union {
