--- a/functions/test-db/json2/scvo/templates/evidence-library-document.hbs
+++ b/functions/test-db/json2/scvo/templates/evidence-library-document.hbs
@@ -18,9 +18,7 @@
                 &nbsp;
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content library-content">
-                {{#with primaryResponse.hits.hits.[0]._source}}
-                {{{rendered.full}}}
-                {{/with}}
+                {{{primaryResponse.hits.hits.[0]._source.rendered.full}}}
             </div>
         </div>
     </div>
