--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -128,6 +128,7 @@ a:hover {
     color: var(--mdc-theme-primary, #00838F);
 }
 .mdc-card__actions a:hover,
+.mdc-button a:hover,
 .mdc-toolbar a:hover {
     text-decoration: none;
 }
@@ -203,12 +204,12 @@ footer .mdc-list .mdc-list-item a:hover {
             box-sizing: border-box;
             padding: 0;
             .mdc-toolbar__title {
-                margin-left: 12px;
+                margin-left: $spacing-unit/2;
                 padding: 5px 0 0;
             }
             .mdc-textfield {
                 margin: 0;
-                max-height: 40px;
+                max-height: 34px;
                 .mdc-textfield__input,
                 .mdc-textfield__input:focus,
                 .mdc-textfield__input:hover {
