Fixed missing supplimentary data

--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -350,7 +350,7 @@ footer .mdc-list .mdc-list-item a:hover {
                 height: auto;
                 max-height: 18vh;
             }
-            h1 {
+            h1.header-text {
                 margin: 0;
                 color: #fff;
                 font-size: 3rem;
@@ -358,48 +358,25 @@ footer .mdc-list .mdc-list-item a:hover {
                 letter-spacing: -0.08rem;
                 line-height: 3rem;
                 margin-bottom: $spacing-unit/4;
-                .highlight {
-                    display: inline;
-                    background: rgba(0,0,0,0.3);
-                    padding: 0 0 0.3rem 0;
-                    box-shadow: 0.75rem 0 0 rgba(0,0,0,0.3), -0.75rem 0 0 rgba(0,0,0,0.3);
-                }
-            }
-            h1.evidence-library-title,
-            h1.document-tile,
-            h1.event-title,
-            h1.post-title {
-                padding-left: 0.75rem;
-                font-size: 2rem;
-                line-height: 3rem;
             }
         }
     }
-    // .mdc-layout-grid {
-    //     position: relative;
-    //     height: 30vh;
-    //     .post-title {
-    //         position: absolute;
-    //         margin: 0;
-    //         bottom: 0;
-    //         left: 0;
-    //         color: white;
-    //     }
-    // }
 }
-.splash-image-featured {
-    height: 30vw;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-clip: content-box;
-    background-size: cover;
-    max-width: 1280px;
-    margin: 0 auto;
-    h1 {
-        display: none;
+.splash-image-scvo-event h1.header-text,
+.splash-image-scvo-cms-post h1.header-text,
+.splash-image-scvo-document-general h1.header-text,
+.splash-image-scvo-document-evidence h1.header-text {
+    padding-left: 0.75rem;
+    font-size: 2rem;
+    line-height: 3rem;
+    .header-text-banner {
+        display: inline;
+        background: rgba(0,0,0,0.3);
+        padding: 0 0 0.3rem 0;
+        box-shadow: 0.75rem 0 0 rgba(0,0,0,0.3), -0.75rem 0 0 rgba(0,0,0,0.3);
     }
 }
-.credit-union .splash-image .header-text {
+.credit-union .splash-image img.header-text {
     max-height: 6rem;
 }
 
@@ -684,7 +661,7 @@ p:last-child {
         display: none;
     }
     h2:first-child,
-    h2:first-child,
+    h3:first-child,
     h4:first-child {
         margin-top: 0 !important;
     }
@@ -692,7 +669,7 @@ p:last-child {
 .sidebar {
     h1:first-child,
     h2:first-child,
-    h2:first-child,
+    h3:first-child,
     h4:first-child {
         margin-top: 0 !important;
     }
