--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -1,7 +1,7 @@
 <section class="v-padding">
     <div class="container-fluid">
         {{#each primaryResponse.hits.hits}}
-            {{{_source.rendered.featured}}}
+        {{{_source.rendered.featured}}}
         {{/each}}
     </div>
 </section>
@@ -12,21 +12,21 @@
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell">
                     <h2>Latest blog posts</h2>
-                    {{{supplimentaryResponse.blogs_latest.hits.hits.[0]._source.rendered.gist}}}
-                    {{{supplimentaryResponse.blogs_latest.hits.hits.[1]._source.rendered.gist}}}
-                    {{{supplimentaryResponse.blogs_latest.hits.hits.[2]._source.rendered.gist}}}
+                    {{#each supplimentaryResponse.blogs_latest.hits.hits}}
+                    {{{_source.rendered.gist}}}
+                    {{/each}}
                 </div>
                 <div class="mdc-layout-grid__cell">
                     <h2>Top <a href="http://goodmoves.com"><strong>good</strong>moves</a> jobs</h2>
-                    {{{supplimentaryResponse.goodmoves_latest.hits.hits.[0]._source.rendered.gist}}}
-                    {{{supplimentaryResponse.goodmoves_latest.hits.hits.[1]._source.rendered.gist}}}
-                    {{{supplimentaryResponse.goodmoves_latest.hits.hits.[2]._source.rendered.gist}}}
+                    {{#each supplimentaryResponse.goodmoves_latest.hits.hits}}
+                    {{{_source.rendered.gist}}}
+                    {{/each}}
                 </div>
                 <div class="mdc-layout-grid__cell">
                     <h2>Latest <a href="http://thirdforcenews.org.uk">TFN</a> news</h2>
-                    {{{supplimentaryResponse.tfn_latest.hits.hits.[0]._source.rendered.gist}}}
-                    {{{supplimentaryResponse.tfn_latest.hits.hits.[1]._source.rendered.gist}}}
-                    {{{supplimentaryResponse.tfn_latest.hits.hits.[2]._source.rendered.gist}}}
+                    {{#each supplimentaryResponse.tfn_latest.hits.hits}}
+                    {{{_source.rendered.gist}}}
+                    {{/each}}
                 </div>
             </div>
         </div>
