Posts layout modifications

--- a/functions/test-db/json2/scvo/templates/page-posts.hbs
+++ b/functions/test-db/json2/scvo/templates/page-posts.hbs
@@ -44,7 +44,7 @@
                 <h3 class="blogs">Our blog posts</h3>
                 <ul class="supplimentary-list">
                     {{#each supplimentaryResponse.blog_posts.hits.hits}}
-                    {{{_source.rendered.sidebar}}}
+                    {{{_source.rendered.gist_sidebar}}}
                     {{/each}}
                 </ul>
             </div>
