--- a/functions/test-db/json2/scvo/templates/post-author.hbs
+++ b/functions/test-db/json2/scvo/templates/post-author.hbs
@@ -20,7 +20,7 @@
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 content post-content">
                 <ul class="supplimentary-list">
                     {{#each primaryResponse.hits.hits}}
-                    {{{_source.rendered.list}}}
+                    {{{_source.rendered.list_expanded}}}
                     {{/each}}
                 </ul>
 
