--- a/functions/test-db/json2/scvo/templates/page-posts.hbs
+++ b/functions/test-db/json2/scvo/templates/page-posts.hbs
@@ -43,7 +43,7 @@
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar page-sidebar">
                 <h3 class="blogs">Our blog posts</h3>
                 <ul class="supplimentary-list">
-                    {{#each supplimentaryResponse.blog_posts.hits.hits}}
+                    {{#each supplimentaryResponse.related_posts.hits.hits}}
                     {{{_source.rendered.gist_sidebar}}}
                     {{/each}}
                 </ul>
