--- a/functions/test-db/json2/scvo/sass.scss
+++ b/functions/test-db/json2/scvo/sass.scss
@@ -379,6 +379,9 @@ footer .mdc-list .mdc-list-item a:hover {
 .credit-union .splash-image img.header-text {
     max-height: 6rem;
 }
+.press-media .sidebar h3.blogs {
+    display: none;
+}
 
 .featured.mdc-card {
     height: 20rem;
