New rendered names

--- a/functions/test-db/json2/scvo/templates/list-posts.hbs
+++ b/functions/test-db/json2/scvo/templates/list-posts.hbs
@@ -25,7 +25,7 @@
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 content post-content">
                 <ul class="supplimentary-list">
                     {{#each primaryResponse.hits.hits}}
-                    {{{_source.rendered.list_expanded}}}
+                    {{{_source.rendered.list}}}
                     {{/each}}
                 </ul>
 
