--- a/functions/test-db/json2/scvo/templates/post.hbs
+++ b/functions/test-db/json2/scvo/templates/post.hbs
@@ -33,7 +33,7 @@
                     <div class="mdc-layout-grid__inner">
                         {{#each supplimentaryResponse.tfn_related_posts.hits.hits}}
                         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
-                            {{{_source.rendered.list_sidebar}}}
+                            {{{_source.rendered.sidebar}}}
                         </div>
                         {{/each}}
                     </div>
